# crypto-technicals

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  refresh_request.json  requirements.txt  trading_log.md
devlogs/: inline_notification_system.md  ui_refactor_collapsible_sections.md  v0.2.0-market-intelligence-expansion.md  v0.2.1-pipeline-optimization.md  v0.3.0-combined-snapshot-system.md  v0.3.1-market-supply-metrics.md  v0.3.2-real-time-price-fix.md  v0.3.3-polling-optimization.md  v0.4.0-trader-copilot-ui-llm-integration.md
specs/: UI-LLM-integration-specs.md  crypto_technicals_specs.md  market_intel_specs.md  snapshot_exporter_spec.md
src/: cli.py  config_loader.py  pipeline.py
src/exporter/: categories_exporter.py  chart_exporter.py  csv_exporter.py  global_exporter.py  json_exporter.py  market_context_exporter.py  metadata_exporter.py  news_exporter.py  snapshot_exporter.py  sqlite_exporter.py  tickers_exporter.py
src/fetch/: coingecko.py
src/indicators/: adx.py  (+8 more)
tests/: test_fetch.py  test_indicators.py  test_pipeline.py
trader-copilot/: .gitignore  README.md  badge-debug.js  check-badge.js  debug-chat.js  debug-ui.js  debug-with-logs.js  final-test.js  package-lock.json  package.json  simple-test.js  test-ai-tool.js  test-auth-debug.js  test-auto-refresh.js  test-chat-conversation.js  test-chat-detailed.js  test-chat-with-tools.js  test-console-debug.js  test-dual-channel.js  test-final-chat.js  test-schema-conversion.js  test-simple-auto.js  test-simple-chat.js  test-tool-calling.js  test-tool-format.js  verify_chat.js
(+46 files in other folders)
